--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.13.0",
+    "@types/lodash": "^4.17.10",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.6",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
