--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
-    "@tabler/icons-react": "^3.13.0",
-    "@types/lodash": "^4.17.10",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tabler/icons-react": "^3.21.0",
+    "@types/lodash": "^4.17.13",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.7.6",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
@@ -30,25 +30,26 @@
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.13.0",
     "@types/js-cookie": "^3.0.6",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^22.8.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/redux-logger": "^3.0.13",
-    "@types/redux-persist": "^4.3.1",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
     "editorconfig": "^2.0.0",
-    "eslint": "^9.9.0",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.41",
+    "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.11.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "sass-embedded": "^1.80.5",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.12.2",
+    "vite": "^5.4.10"
   }
 }
