--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^3.1.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
